--- a/index.html
+++ b/index.html
@@ -35,11 +35,59 @@
                 <h2>Medcenter ia a responsive template perfect for all screen sizes</h2>
 
             </div>
-            <div class="banne_options" >
+            <div class="banner_options" >
+                <div class="banner1">
+                    <div class="banner_title">Emergency Case</div>
+                    <div class="banner_desc">Algum texto qualquer</div>
+                    <a href="#">Read more</a>
+                </div>
+                
+                <div class="banner2">
+                    <div class="banner_title">Doctors Timetable</div>
+                    <div class="banner_desc">Algum texto qualquer</div> 
+                    <a href="#">Read more</a>
+                </div>
+                
+                <div class="banner3">
+                    <div class="banner_title">Opening Houers</div>
+                    <div class="banner_desc"></div> 
+                </div>
 
             </div>
 
         </div>
+    </section>
+    <section id="geral">
+        <div class="container">
+            <section>
+                <div class="widget_title">
+                    <div class="widget_title_text">Latest News</div>
+                    <div class="widget_title_bar"></div>
+                    <div class="widget_body">
+                    <div class="widget_body">
+                        ...
+                    </div>
+                </div>
+
+            </section>
+            <aside>
+                <div class="widget_title">
+                    <div class="widget_title_text">Departaments</div>
+                    <div class="widget_title_bar"></div>
+                    <div class="widget_body">
+                        ...
+                    </div>
+                </div>
+                <div class="widget_title">
+                    <div class="widget_title_text">Make Appointment</div>
+                    <div class="widget_title_bar"></div>
+                    <div class="widget_body">
+                        ...
+                    </div>
+                </div>
+            </aside>
+        </div>
+
     </section>
 </body>
 </html>
