conclusion of aside

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="widget_title">
                     <div class="widget_title_text">Latest News</div>
                     <div class="widget_title_bar"></div>
-                    <div class="widget_body flex ">                    
+                    <div class=" flex "> 
                         <article>
                             <a href="">
                                 <div class="news_data">
@@ -148,16 +148,37 @@
             <aside>
                 <div class="widget_title">
                     <div class="widget_title_text">Departaments</div>
-                    <div class="widget_title_bar"></div>
-                    <div class="widget_body">
-                        ...
+                    <div class="widget_title_bar"></div>                    
+                    <div class="widget_body_departaments">
+                        <div class="aside_square">1</div>
+                        <div class="aside_square">2</div>
+                        <div class="aside_square">3</div>
+                        <div class="aside_square">4</div>
+                        <div class="aside_square">5</div>
+                        <div class="aside_square">6</div>
+                                        
                     </div>
                 </div>
                 <div class="widget_title">
                     <div class="widget_title_text">Make Appointment</div>
                     <div class="widget_title_bar"></div>
-                    <div class="widget_body">
-                        ...
+                    <div class="widget_body_appointment">
+                        <div class="widget_text_appointment">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolor harum suscipit aut enim ea. </div>
+                    </div>
+                    <div class="widget_content_body">
+                        <div class="widget_content01">
+                            <div class="sqaure"></div>
+                            <div class="widget_content_text">Lorem ipsum dolor sit amet</div>
+                        </div>
+                        <div class="widget_content02 widget_content01">
+                            <div class="sqaure"></div>
+                            <div class="widget_content_text">Lorem ipsum dolor sit amet</div>
+                        </div>
+                        <div class="widget_content01">
+                            <div class="sqaure"></div>
+                            <div class="widget_content_text">Lorem ipsum dolor sit amet</div>
+                        </div>
+
                     </div>
                 </div>
             </aside>
@@ -190,7 +211,7 @@
                     <div class="widget_title">
                         <div class="widget_title_text">Medicenter Clinic</div>
                         <div class="widget_title_bar"></div>
-                        <div class="widget_body">
+                        <div class="widget_body_footer">
                             ...
                         </div>
                     </div>
@@ -199,7 +220,7 @@
                     <div class="widget_title">
                         <div class="widget_title_text">Latest Post</div>
                         <div class="widget_title_bar"></div>
-                        <div class="widget_body">
+                        <div class="widget_body_footer">
                             ...
                         </div>
                     </div>
@@ -208,7 +229,7 @@
                     <div class="widget_title">
                         <div class="widget_title_text">Latest tweets</div>
                         <div class="widget_title_bar"></div>
-                        <div class="widget_body">
+                        <div class="widget_body_footer">
                             ...
                         </div>
                     </div>
