--- a/index.html
+++ b/index.html
@@ -55,11 +55,26 @@
                 
                 <div class="banner3">
                     <div class="banner_title">Opening Houers</div>
-                    <div class="banner_desc"></div> 
+
+                    <div class="banner_desc">
+
+                        <div class="banner3_conten">
+                            <div>Monday - Friday</div>
+                            <div>08:00 - 17:00</div>
+                        </div>
+
+                        <div class="banner3_conten">
+                            <div>Satunday</div>
+                            <div>09:30 - 17:30</div>
+                        </div>
+
+                        <div class="banner3_conten">
+                            <div>Sunday</div>
+                            <div>09:30 - 17:30</div>
+                        </div>
+                    </div> 
                 </div>
-
             </div>
-
         </div>
     </section>
     <section id="geral">
@@ -150,12 +165,12 @@
                     <div class="widget_title_text">Departaments</div>
                     <div class="widget_title_bar"></div>                    
                     <div class="widget_body_departaments">
-                        <div class="aside_square">1</div>
-                        <div class="aside_square">2</div>
-                        <div class="aside_square">3</div>
-                        <div class="aside_square">4</div>
-                        <div class="aside_square">5</div>
-                        <div class="aside_square">6</div>
+                        <div class="aside_square">...</div>
+                        <div class="aside_square">...</div>
+                        <div class="aside_square">...</div>
+                        <div class="aside_square">...</div>
+                        <div class="aside_square">...</div>
+                        <div class="aside_square">...</div>
                                         
                     </div>
                 </div>
