--- a/index.html
+++ b/index.html
@@ -206,17 +206,20 @@
             <div class="footer_menu">
                 <div class="fm1">
                     <a href="">
-                        ...
+                        <div class="fm1_text">Health Inurance</div>
+                        <div class="fm1_caption">Um nome qualquer</div>
                     </a>
                 </div>
                 <div class="fm2">
                     <a href="">
-                        ...
+                        <div class="fm1_text">Medical Records</div>
+                        <div class="fm1_caption">Um nome qualquer</div>
                     </a>
                 </div>
                 <div class="fm3">
                     <a href="">
-                        ...
+                        <div class="fm1_text">Online Bill Pay</div>
+                        <div class="fm1_caption">Um nome qualquer</div>
                     </a>
                 </div>
             </div>
@@ -227,7 +230,20 @@
                         <div class="widget_title_text">Medicenter Clinic</div>
                         <div class="widget_title_bar"></div>
                         <div class="widget_body_footer">
-                            ...
+                            <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, onsequuntur</div>
+                            <address>
+                                <div>
+                                    Medicenter Clinic <br>
+                                    33 Farlane Street <br>
+                                    Keilor East <br>
+                                    VIC 3033, Australia
+                                </div>
+                                <div>
+                                    +123 655 655 <br>
+                                    +123 755 755 <br>
+                                    <i>medicenter@mail.com</i> 
+                                </div>
+                            </address>
                         </div>
                     </div>
                 </div>
@@ -236,7 +252,16 @@
                         <div class="widget_title_text">Latest Post</div>
                         <div class="widget_title_bar"></div>
                         <div class="widget_body_footer">
-                            ...
+                            <ul>
+                                <li ><i>&#129122;</i> Lorem ipsum, dolor sit amet consectetur adipisicing <br> <span>10 years ago</span>
+                                </li>
+                                <li><i>&#129122;</i> Lorem ipsum, dolor sit amet consectetur <br>
+                                    <span>10 years ago</span>
+                                </li>
+                                <li><i>&#129122;</i> Lorem ipsum, dolor sit amet consectetur adipisicing <br>
+                                    <span>10 years ago</span>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -244,8 +269,20 @@
                     <div class="widget_title">
                         <div class="widget_title_text">Latest tweets</div>
                         <div class="widget_title_bar"></div>
-                        <div class="widget_body_footer">
-                            ...
+                        <div class="widget_body_footer2">
+                            <ul>
+                                <li> <i>&#129122;</i>  We've just uploaded Finpeak - #Business #Finance #Consulting Template on #ThemeForest 👉 Download it here:
+                                <a class="footer_link" href="">t.co/1qD396S2w9</a> <br> <span>2 months ago</span>
+                                </li>
+                                <li><i>&#129122;</i> We've released new version (v14.4) of our GymBase #Gym #Fitness #WordPress Theme. Please check at #ThemeForest
+                                <a class="footer_link" href="">t.co/8mEwDqIFTE</a> <br>
+                                    <span>4 months ago</span>
+                                </li>
+                                <li><i>&#129122;</i> We've released new version (v13.3) of our MediCenter #Health #Medical #Clinic #WordPress Theme. Please check at…
+                                <a class="footer_link" href="">t.co/xgJMBzw1lz</a> <br>
+                                    <span>4 months ago</span>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
